Created a board with a small moving piece

--- a/GomokuLogic/myPage.html
+++ b/GomokuLogic/myPage.html
@@ -1,12 +1,5 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css" />
-    <script type="text/javascript" src="script.js"></script>
-</head>
-<body>
-    <div></div>
-    <div id="green"></div>
-</body>
-</html>
+﻿<DOCTYPE! html>
+<div id="board">
+    <div id="player" class="smoothmove"><span class="icon">♖</span></div>
+</div>
+</div>
