Added a head and body tags to the html file. Modified

--- a/GomokuLogic/Web Parts/myPage.html
+++ b/GomokuLogic/Web Parts/myPage.html
@@ -1,5 +1,11 @@
 ﻿<DOCTYPE! html>
+ <head>
+   <script src = "script.js"></script>
+   <link rel="stylesheet" href="stylesheet.css"/> 
+ </head>
+ <body>
 <div id="board">
-    <div id="player" class="smoothmove"><span class="icon">♖</span></div>
+    <div id="player" class="smoothmove"><span class="icon">m</span></div>
 </div>
 </div>
+  </body>
