Added html tags, and "!DOCTYPE" instead of "DOCTYPE!"

--- a/GomokuLogic/Web Parts/myPage.html
+++ b/GomokuLogic/Web Parts/myPage.html
@@ -1,6 +1,7 @@
-﻿<DOCTYPE! html>
+﻿<!DOCTYPE html>
+<html>
  <head>
-   <script src = "script.js"></script>
+   <script src="script.js"></script>
    <link rel="stylesheet" href="stylesheet.css"/> 
  </head>
  <body>
@@ -9,3 +10,4 @@
 </div>
 </div>
   </body>
+</html>
